--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://Lagattix.github.io/studio-medico",
+  "homepage": "https://lagattix.github.io/studio-medico",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,6 +16,8 @@
     "firebase": "^12.7.0",
     "gh-pages": "^6.3.0",
     "lucide-react": "^0.562.0",
+
+
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
